fix reverse on mobile when reverse tablet and mobile and stack on tablet case

--- a/src/blocks/columns/style.scss
+++ b/src/blocks/columns/style.scss
@@ -236,6 +236,11 @@
 		flex-direction: column-reverse;
 	}
 
+	.uagb-columns__stack-mobile.uagb-columns__reverse-tablet .uagb-columns__inner-wrap {
+		display: flex;
+		flex-direction: column-reverse;
+	}
+
 	.uagb-columns__reverse-mobile .uagb-columns__inner-wrap {
 		display: flex;
 		flex-direction: row-reverse;
